--- a/modal.html
+++ b/modal.html
@@ -34,7 +34,7 @@
           <strong>Note:</strong> For <code class="w3-codespan">&lt;a&gt;</code> elements, omit 
           <code class="w3-codespan">data-target</code>, and use <code class="w3-codespan">href="#modalID"</code> instead:
         </p>
-        <a href="https://www.w3schools.com/bootstrap/bootstrap_ref_js_modal.asp" class="btn btn-primary btn-lg" target="_blank">參考網站</a>
+        <a href="https://www.w3schools.com/bootstrap/bootstrap_ref_js_modal.asp" class="" target="_blank">參考網站</a>
       </div>
       <!-- Trigger the modal with a button -->
       <button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#myModal">Open Modal</button>
