--- a/index.html
+++ b/index.html
@@ -90,15 +90,12 @@
           <ul class="nav navbar-nav navbar-right">
             <li id="fat-menu" class="dropdown">
               <a id="drop3" href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
-                下拉選單3
+                其他
                 <span class="caret"></span>
               </a>
               <ul class="dropdown-menu" aria-labelledby="drop3">
-                <li><a href="#">Action</a></li>
-                <li><a href="#">Another action</a></li>
-                <li><a href="#">Something else here</a></li>
+                <li><a href="google/prettify.html">高亮度程式碼顯示</a></li>
                 <li role="separator" class="divider"></li>
-                <li><a href="#">Separated link</a></li>
               </ul>
             </li>
           </ul>
