--- a/index.html
+++ b/index.html
@@ -95,6 +95,7 @@
               </a>
               <ul class="dropdown-menu" aria-labelledby="drop3">
                 <li><a href="google/prettify.html">高亮度程式碼顯示</a></li>
+                <li><a href="css.html">CSS筆記</a></li>
                 <li role="separator" class="divider"></li>
               </ul>
             </li>
