--- a/plugins.html
+++ b/plugins.html
@@ -25,7 +25,7 @@
       <iframe src="https://docs.google.com/spreadsheets/d/1qTU29MZpeH8e7lp5erWe9mOVRQeLgdNNFxFykumdgEA/pubhtml?widget=true&amp;headers=false" style="width: 100%;height: 400px;"></iframe>
     </div>
     <div class="container">
-      <h5 class="text-center">育將電腦工作室：<a href="https://www.ugm.com.tw" target="_blank"></a></h5>
+      <h5 class="text-center">育將電腦工作室：<a href="https://www.ugm.com.tw" target="_blank">https://www.ugm.com.tw</a></h5>
       <h5 class="text-center">MAIL：tawan158@ugm.com.tw </h5>
     </div>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
