--- a/plugins.html
+++ b/plugins.html
@@ -31,10 +31,11 @@
   </head>
   <body>
     <div class="container">
-      <h1>Bootstrap Plugins</h1>
+      <h1 class="text-center">Bootstrap Plugins</h1>
       <div>
-        <a href="https://docs.google.com/spreadsheets/d/1qTU29MZpeH8e7lp5erWe9mOVRQeLgdNNFxFykumdgEA/pubhtml" target="_blank" class="btn btn-primary btn-lg">編輯</a>
+        <a href="https://docs.google.com/spreadsheets/d/1qTU29MZpeH8e7lp5erWe9mOVRQeLgdNNFxFykumdgEA/pubhtml" target="_blank" class="btn btn-primary">編輯</a>
       </div>
+      <hr>
       <iframe src="https://docs.google.com/spreadsheets/d/1qTU29MZpeH8e7lp5erWe9mOVRQeLgdNNFxFykumdgEA/pubhtml?widget=true&amp;headers=false" style="width: 100%;height: 400px;"></iframe>
     </div>
     <div class="container">
