--- a/plugins.html
+++ b/plugins.html
@@ -33,7 +33,7 @@
     <div class="container">
       <h1 class="text-center">Bootstrap Plugins</h1>
       <div>
-        <a href="https://docs.google.com/spreadsheets/d/1qTU29MZpeH8e7lp5erWe9mOVRQeLgdNNFxFykumdgEA/edit?usp=sharing" target="_blank" class="btn btn-primary">編輯</a>
+        <a href="https://docs.google.com/spreadsheets/d/1qTU29MZpeH8e7lp5erWe9mOVRQeLgdNNFxFykumdgEA/edit#gid=0" target="_blank" class="btn btn-primary">編輯</a>
       </div>
       <hr>
       <iframe src="https://docs.google.com/spreadsheets/d/1qTU29MZpeH8e7lp5erWe9mOVRQeLgdNNFxFykumdgEA/pubhtml?widget=true&amp;headers=false" style="width: 100%;height: 400px;"></iframe>
