--- a/plugins.html
+++ b/plugins.html
@@ -32,14 +32,11 @@
   <body>
     <div class="container">
       <h1 class="text-center">Bootstrap Plugins</h1>
-      <div>
-        <a href="https://docs.google.com/spreadsheets/d/1qTU29MZpeH8e7lp5erWe9mOVRQeLgdNNFxFykumdgEA/edit#gid=0" target="_blank" class="btn btn-primary">編輯</a>
-      </div>
       <hr>
       <iframe src="https://docs.google.com/spreadsheets/d/1qTU29MZpeH8e7lp5erWe9mOVRQeLgdNNFxFykumdgEA/pubhtml?widget=true&amp;headers=false" style="width: 100%;height: 400px;"></iframe>
     </div>
     <div class="container">
-      <h5 class="text-center">育將電腦工作室：<a href="https://www.ugm.com.tw" target="_blank">https://www.ugm.com.tw</a></h5>
+      <h5 class="text-center">育將電腦工作室：<a href="https://www.ugm.com.tw" target="_blank">https://www.ugm.com.tw</a><a href="https://docs.google.com/spreadsheets/d/1qTU29MZpeH8e7lp5erWe9mOVRQeLgdNNFxFykumdgEA/edit#gid=0" target="_blank">&nbsp;&nbsp;</a></h5>
       <h5 class="text-center">MAIL：tawan158@ugm.com.tw </h5>
     </div>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
