--- a/g-maps-api.html
+++ b/g-maps-api.html
@@ -18,6 +18,30 @@
     <![endif]-->
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="js/jquery.min.js"></script>
+
+    <script type="text/javascript">
+      //載入Google Maps API 3
+      window.onload = loadScript;
+      function loadScript() { 
+         var script = document.createElement("script");  
+         script.type = "text/javascript";  
+         script.src = "http://maps.google.com/maps/api/js?key=AIzaSyDCseWFRuIInzohi2OhshzAJO9oBd3Ycfo&sensor=false&callback=initialize";  
+         document.body.appendChild(script);
+      } 
+
+      function initialize() {
+        //設定地圖屬性，建立地圖
+        var myLatlng = new google.maps.LatLng(22.638947,120.301902); 
+        //Google Map初始化
+        var myOptions = {    
+          zoom: 18,   
+          center: myLatlng,   
+          mapTypeId:
+          google.maps.MapTypeId.ROADMAP 
+        }  
+          var map = new google.maps.Map(document.getElementById("map_canvas"), myOptions);
+      } 
+    </script>
   </head>
   <body>
     <div class="container">
@@ -29,23 +53,7 @@
     </div>
     <div class="container">
       
-      <div id="map"></div>
-      <script>
-        function initMap() {
-          var uluru = {lat: -25.363, lng: 131.044};
-          var map = new google.maps.Map(document.getElementById('map'), {
-            zoom: 4,
-            center: uluru
-          });
-          var marker = new google.maps.Marker({
-            position: uluru,
-            map: map
-          });
-        }
-      </script>
-      <script async defer
-      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDCseWFRuIInzohi2OhshzAJO9oBd3Ycfo&callback=initMap">
-      </script>
+      <div id="map_canvas" style="width: 100%;height:300px;"></div>
     </div>
 
 
