--- a/g-maps-api.html
+++ b/g-maps-api.html
@@ -25,7 +25,7 @@
       function loadScript() { 
          var script = document.createElement("script");  
          script.type = "text/javascript";  
-         script.src = "http://maps.google.com/maps/api/js?key=AIzaSyDCseWFRuIInzohi2OhshzAJO9oBd3Ycfo&sensor=false&callback=initialize";  
+         script.src = "http://maps.google.com/maps/api/js?key=AIzaSyDCseWFRuIInzohi2OhshzAJO9oBd3Ycfo&callback=initialize";  
          document.body.appendChild(script);
       } 
 
