--- a/calendar.html
+++ b/calendar.html
@@ -23,6 +23,13 @@
     <div class="container">
       <iframe src="https://calendar.google.com/calendar/embed?src=64pchssr183k3s83cafu54e96o%40group.calendar.google.com&ctz=Asia/Taipei" style="border: 0;width:100%;height:600px;"  frameborder="0" scrolling="no"></iframe>
     </div>
+    <div class="container">
+      <p>如果手機要顯示，記得css要設定：style="border: 0;width:100%;height:600px;"</p>
+      <pre>
+        &lt;iframe src=&quot;https://calendar.google.com/calendar/embed?src=64pchssr183k3s83cafu54e96o%40group.calendar.google.com&amp;ctz=Asia/Taipei&quot; style=&quot;border: 0;width:100%;height:600px;&quot;  frameborder=&quot;0&quot; scrolling=&quot;no&quot;&gt;&lt;/iframe&gt;
+        
+      </pre>
+    </div>
 
 
 
