--- a/index.html
+++ b/index.html
@@ -93,6 +93,7 @@
               </a>
               <ul class="dropdown-menu" aria-labelledby="drop5">
                 <li><a href="plugins.html">好用插件</a></li>
+                <li><a href="masonry.html">瀑布流</a></li>
                 <li><a href="#">Separated link</a></li>
               </ul>
             </li>
