--- a/carousel.html
+++ b/carousel.html
@@ -20,40 +20,81 @@
     <script src="js/jquery.min.js"></script>
   </head>
   <body>
-    <div class="container">
-    </div>
+    <style type="text/css">
+      .carousel-caption {
+          color:black;
+          display:flex;
+          align-items:center;
+      }
+    </style>
 
     <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
-      <!-- Indicators -->
+      <!-- 指標 -->
       <ol class="carousel-indicators">
         <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
         <li data-target="#carousel-example-generic" data-slide-to="1"></li>
         <li data-target="#carousel-example-generic" data-slide-to="2"></li>
       </ol>
 
-      <!-- Wrapper for slides -->
+      <!-- 輪播圖片 -->
       <div class="carousel-inner" role="listbox">
         <div class="item active">
           <img src="https://unsplash.it/1920/850/?image=1" alt="...">
-          <div class="carousel-caption">
-            1
-          </div>
+          <!-- Static Header -->
+          <div class="header-text hidden-xs">
+              <div class="col-md-12 text-center">
+                  <h2>
+                    <span>Welcome to <strong>LOREM IPSUM</strong></span>
+                  </h2>
+                  <br>
+                  <h3>
+                    <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</span>
+                  </h3>
+                  <br>
+                  <div class="">
+                      <a class="btn btn-theme btn-sm btn-min-block" href="#">Login</a><a class="btn btn-theme btn-sm btn-min-block" href="#">Register</a></div>
+              </div>
+          </div><!-- /header-text -->
         </div>
         <div class="item">
           <img src="https://unsplash.it/1920/850/?image=2" alt="...">
-          <div class="carousel-caption">
-            2
-          </div>
+          <!-- Static Header -->
+          <div class="header-text hidden-xs">
+              <div class="col-md-12 text-center">
+                  <h2>
+                    <span>Welcome to <strong>LOREM IPSUM</strong></span>
+                  </h2>
+                  <br>
+                  <h3>
+                    <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</span>
+                  </h3>
+                  <br>
+                  <div class="">
+                      <a class="btn btn-theme btn-sm btn-min-block" href="#">Login</a><a class="btn btn-theme btn-sm btn-min-block" href="#">Register</a></div>
+              </div>
+          </div><!-- /header-text -->
         </div>
         <div class="item">
           <img src="https://unsplash.it/1920/850/?image=3" alt="...">
-          <div class="carousel-caption">
-            3
-          </div>
+          <!-- Static Header -->
+          <div class="header-text hidden-xs">
+              <div class="col-md-12 text-center">
+                  <h2>
+                    <span>Welcome to <strong>LOREM IPSUM</strong></span>
+                  </h2>
+                  <br>
+                  <h3>
+                    <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</span>
+                  </h3>
+                  <br>
+                  <div class="">
+                      <a class="btn btn-theme btn-sm btn-min-block" href="#">Login</a><a class="btn btn-theme btn-sm btn-min-block" href="#">Register</a></div>
+              </div>
+          </div><!-- /header-text -->
         </div>
       </div>
 
-      <!-- Controls -->
+      <!-- 控制 -->
       <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
         <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
         <span class="sr-only">Previous</span>
