--- a/index.html
+++ b/index.html
@@ -134,11 +134,22 @@
         </div><!-- /.nav-collapse -->
       </div><!-- /.container-fluid -->
     </nav>
+    <div class="container">
+    	<div class="fb-like" data-href="http://bootstrap.ugm.com.tw/" data-layout="standard" data-action="like" data-size="large" data-show-faces="true" data-share="true"></div>
+    </div>
 
 
 
   
     <!-- Include all compiled plugins (below), or include individual files as needed -->
     <script src="js/bootstrap.min.js"></script>
+    <div id="fb-root"></div>
+    <script>(function(d, s, id) {
+      var js, fjs = d.getElementsByTagName(s)[0];
+      if (d.getElementById(id)) return;
+      js = d.createElement(s); js.id = id;
+      js.src = "//connect.facebook.net/zh_TW/sdk.js#xfbml=1&version=v2.9&appId=104309260162514";
+      fjs.parentNode.insertBefore(js, fjs);
+    }(document, 'script', 'facebook-jssdk'));</script>
   </body>
 </html>
