--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
     	123
     </div>
     <div class="container">
-    	<div class="fb-like" data-href="http://bootstrap.ugm.com.tw/" data-layout="standard" data-action="like" data-size="large" data-show-faces="true" data-share="true"></div>
+    	<div class="fb-like" data-href="http://bootstrap.ugm.com.tw" data-width="500" data-layout="standard" data-action="like" data-size="large" data-show-faces="true" data-share="true"></div>
     </div>
 
 
@@ -146,12 +146,16 @@
   
     <!-- Include all compiled plugins (below), or include individual files as needed -->
     <script src="js/bootstrap.min.js"></script>
+    
+
+
+    <!-- fb -->
     <div id="fb-root"></div>
     <script>(function(d, s, id) {
       var js, fjs = d.getElementsByTagName(s)[0];
       if (d.getElementById(id)) return;
       js = d.createElement(s); js.id = id;
-      js.src = "//connect.facebook.net/zh_TW/sdk.js#xfbml=1&version=v2.9&appId=104309260162514";
+      js.src = "//connect.facebook.net/zh_TW/sdk.js#xfbml=1&version=v2.9&appId=116826088925559";
       fjs.parentNode.insertBefore(js, fjs);
     }(document, 'script', 'facebook-jssdk'));</script>
   </body>
