--- a/index.html
+++ b/index.html
@@ -129,6 +129,7 @@
               <ul class="dropdown-menu" aria-labelledby="drop3">
                 <li><a href="google/prettify.html">高亮度程式碼顯示</a></li>
                 <li><a href="css.html">CSS筆記</a></li>
+                <li><a href="plugins.html" target="_blank">套件筆記</a></li>
                 <li role="separator" class="divider"></li>
                 <li><a href="https://drive.google.com/drive/folders/0B0mUauXVHh4fR1RkUk1pNWhjLU0?usp=sharing" target="_blank">常用工具(ocm)</a></li>
               </ul>
