--- a/plugins.html
+++ b/plugins.html
@@ -33,6 +33,8 @@
     <div class="container">
       <h1 class="text-center">Bootstrap Plugins</h1>
       <hr>
+      <a class="btn btn-md btn-primary" href='https://docs.google.com/spreadsheets/d/1gArCmHrw4vZRl70Q9LVr26o-Fm2--lJzroqhnxEYMF0/edit?usp=sharing'>編輯</a>
+      <iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vTJRn8I4dvjQBt8ILDi05bUrme8CF7dL4FffeApTt6FYQteLtIUSXrksTKAws2l4RkLiY1E5wK8-p1K/pubhtml?gid=0&amp;single=true&amp;widget=true&amp;headers=false" style="width: 100%;height: 400px;"></iframe>
       <iframe src="https://docs.google.com/spreadsheets/d/1qTU29MZpeH8e7lp5erWe9mOVRQeLgdNNFxFykumdgEA/pubhtml?widget=true&amp;headers=false" style="width: 100%;height: 400px;"></iframe>
     </div>
     <div class="container">
