--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                 <li><a href="plugins.html">好用插件</a></li>
                 <li><a href="masonry.html">瀑布流</a></li>
                 <li><a href="#">Separated link</a></li>
-                <li><a href="chained.html">連動選單</a></li>
+                <li><a href="chained.html" target="_blank">連動選單</a></li>
               </ul>
             </li>
             <li class="dropdown">
