--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
               </a>
               <ul class="dropdown-menu" aria-labelledby="drop4">
                 <li><a href="modal.html">modal 模態彈窗</a></li>
-                <li><a href="#">Another action</a></li>
+                <li><a href="owl-carousel.html" target="_blank">Owl Carousel</a></li>
                 <li><a href="#">Something else here</a></li>
                 <li role="separator" class="divider"></li>
                 <li><a href="#">Separated link</a></li>
