--- a/modal.html
+++ b/modal.html
@@ -42,6 +42,10 @@
 
       <!-- Trigger the modal with a button -->
       <button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#myModal">Open Modal</button>
+      <!-- Trigger the modal with a button -->
+      <button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#m1">m1</button>
+
+
       <!-- Modal -->
       <div class="modal fade" id="myModal" role="dialog">
         <div class="modal-dialog">        
@@ -105,6 +109,28 @@
         <li><a href="http://www.w3school.com.cn/cssref/css_colors_legal.asp" target="_blank">background-color：</a> CSS 背景颜色值</li>
       </ul>
     </div>
+
+  <!-- m1 MODAL -->
+  <div class="modal fade" id="m1" tabindex="-1" role="dialog">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+          <h3 class="modal-title">標題</h3>
+        </div>
+        <div class="modal-body">
+          
+          <!-- 內容 -->
+          <div>內容</div>
+
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+          <button type="button" class="btn btn-primary">送出</button>
+        </div>
+      </div>
+    </div>
+  </div>
 
      
 
