--- a/owl-carousel.html
+++ b/owl-carousel.html
@@ -46,6 +46,29 @@
           }
         });
       });
+
+
+            //partners slider
+            jQuery(document).ready(function () {
+
+                jQuery("#owl-partners").owlCarousel({
+                loop:true,
+                margin:0,
+                nav:false,
+                responsive:{
+                    0:{
+                        items:1
+                    },
+                    600:{
+                        items:3
+                    },
+                    1000:{
+                        items:6
+                    }
+                }
+            });
+
+            });
     </script>
 
     <!--new arrivals-->
@@ -116,6 +139,31 @@
             <!--owl end-->
         </div>
     </section>
+
+    
+        <!--partners-->
+        <section class="partners">
+            <div class='container'>
+                <h2 class="section-heading">Our Partners</h2>
+                <div class="row">
+                    <div id="owl-partners" class="col-md-12 owl-carousel owl-theme">
+
+                        <div class="item"><img src="images/partner.png" alt="parner" class="img-responsive"></div>
+                        <div class="item"><img src="images/partner.png" alt="parner" class="img-responsive"></div>
+                        <div class="item"><img src="images/partner.png" alt="parner" class="img-responsive"></div>
+                        <div class="item"><img src="images/partner.png" alt="parner" class="img-responsive"></div>
+                        <div class="item"><img src="images/partner.png" alt="parner" class="img-responsive"></div>
+                        <div class="item"><img src="images/partner.png" alt="parner" class="img-responsive"></div>
+                        <div class="item"><img src="images/partner.png" alt="parner" class="img-responsive"></div>
+                        <div class="item"><img src="images/partner.png" alt="parner" class="img-responsive"></div>
+                        <div class="item"><img src="images/partner.png" alt="parner" class="img-responsive"></div>
+                        <div class="item"><img src="images/partner.png" alt="parner" class="img-responsive"></div>
+
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!--end partners-->
 
 
 
