--- a/xoops.html
+++ b/xoops.html
@@ -33,7 +33,7 @@
     <div class="container">
       <h1 class="text-center">XOOPS指令函數</h1>
       <hr>
-      <a class="btn btn-md btn-primary" href='https://goo.gl/QZfreB'>編輯</a>
+      <a class="btn btn-md btn-primary" href='https://goo.gl/i7ZQVc'>編輯</a>
       <iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vQEGixJmzODkuOt09Eiv7PAbgMZwYPDAnWgtUhy8BLNyA53N1H6xfTBdec2ZjcclsuiYwK2BT-n5rgl/pubhtml?gid=0&amp;single=true&amp;widget=true&amp;headers=false"  style="width: 100%;height: 400px;"></iframe>   
     </div>
     <div class="container">
