--- a/xoops.html
+++ b/xoops.html
@@ -15,7 +15,7 @@
     <meta property="og:url" content="http://bootstrap.ugm.com.tw/plugins.html">
     <meta property="og:image" content="http://bootstrap.ugm.com.tw/img/namecard.jpg">
     <meta property="og:description" content="育將電腦工作室，台南市永康區大灣路158號,TEL：0921560421,mail：tawan158@ugm.com.tw" >
-    <title>Bootstrap Plugins 育將電腦工作室</title>
+    <title>XOOPS指令函數 育將電腦工作室</title>
 
     <!-- Bootstrap -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
