google maps group

--- a/index.html
+++ b/index.html
@@ -107,6 +107,7 @@
               </a>
               <ul class="dropdown-menu" aria-labelledby="drop6">
                 <li><a href="g-maps-api.html">google maps api</a></li>
+                <li><a href="g-maps-group.html">google maps group</a></li>
                 <li><a href="#">Separated link</a></li>
               </ul>
             </li>
